less redundant diffing